# portunus-extensions

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: publish.yml  validate.yml
companions/firefox-ytm/: README.md  background.js  manifest.json
companions/firefox-ytm/content/: actions.js  library.js  page-bridge.js  router.js  search.js
extensions/cheatsh/: Cargo.toml  manifest.toml
extensions/cheatsh/src/: lib.rs
extensions/emoji/: Cargo.toml  README.md  icon.b64  manifest.toml
extensions/emoji/src/: lib.rs
extensions/gh/: Cargo.toml  icon_bell.b64  icon_code.b64  icon_issue.b64  icon_pr.b64  icon_repo.b64  icon_star.b64  icon_user.b64  manifest.toml
extensions/gh/src/: api.rs  lib.rs  preview.rs  render.rs
extensions/ytm/: Cargo.toml  README.md  icon.b64  manifest.toml
extensions/ytm/src/: lib.rs
scripts/: generate_index.py
