[package]
name = "ytm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
portunus-ext-sdk = { git = "https://github.com/SzilBalazs/portunus", tag = "v0.5.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
